--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,17 +15,21 @@
       "DOM"
     ],
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true
+    "skipDefaultLibCheck": true,
+    "types": [
+      "buefy/src/types"
+    ]
   },
+  "exclude": [
+    "./node_modules"
+  ],
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue"
   ],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+  "references": [{
+    "path": "./tsconfig.node.json"
+  }]
 }
