--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@types/node": "^20.12.7",
+    "primevue": "^3.51.0",
     "vue": "^3.2.37",
-    "vuetify": "^3.5.15"
+    "vue-i18n": "9"
   },
   "devDependencies": {
     "rimraf": "latest",
