--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,9 +16,7 @@
     ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "types": [
-      
-    ]
+    "types": []
   },
   "exclude": [
     "./node_modules"
