--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@types/node": "^20.12.7",
+    "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
     "vue": "^3.2.37",
     "vue-i18n": "9"
