--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
     "vue": "^3.2.37",
-    "vue-i18n": "9"
+    "vue-i18n": "9",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "rimraf": "latest",
