--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@
 # Go workspace file
 go.work
 
-# Wails
-build
-node_modules
-frontend/dist
+# Custom
+.vscode/
+node_modules/
+frontend/node_modules/
+frontend/dist/
+build/
