--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,28 +4,27 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
+    "dev": "bunx vite",
+    "build": "bunx vite build",
+    "preview": "bun -b vite preview",
     "reinstall": "rimraf node_modules && bun i"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.8",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "^3.51.0",
-    "vue": "^3.2.37",
+    "primevue": "^3.52.0",
+    "vue": "^3.4.26",
     "vue-i18n": "9",
     "vue-router": "4",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "rimraf": "latest",
+    "typescript": "latest",
+    "vite": "latest",
     "@vitejs/plugin-vue": "^3.0.3",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7",
-    "vue-tsc": "^1.8.27",
     "@babel/types": "^7.18.10"
   }
 }
