--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,9 @@ go.work
 
 # Custom
 .vscode/
+build/
 node_modules/
 frontend/node_modules/
 frontend/dist/
 frontend/src/mocks/
-build/
+frontend/wailsjs/
