--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,7 +17,12 @@
     ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "types": []
+    "types": [],
+    "baseUrl": ".",
+    "paths": {
+      "@backend": ["./wailsjs/go/backend", "./wailsjs/go/backend/*"],
+      "@runtime": ["./wailsjs/runtime/runtime"]
+    }
   },
   "exclude": [
     "./node_modules"
