--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,12 +20,19 @@
     "types": [],
     "baseUrl": ".",
     "paths": {
-      "@backend": ["./wailsjs/go/backend", "./wailsjs/go/backend/*"],
-      "@runtime": ["./wailsjs/runtime/runtime"]
+      "@store": ["./src/store"],
+      "@types": ["./src/types"],
+      "@i18n": ["./src/i18n"],
+      "@backend/*": ["./wailsjs/go/*"],
+      "@runtime": ["./wailsjs/runtime/runtime", "./wailsjs/runtime/runtime/*"],
+      "rollup/parseAst": ["./node_modules/rollup/dist/parseAst"]
     }
   },
   "exclude": [
-    "./node_modules"
+    "./node_modules",
+    "./node_modules/**",
+    "./node_modules/**/**",
+    "vite.config.ts"
   ],
   "include": [
     "src/**/*.ts",
