--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,7 @@
     "paths": {
       "@assets": ["./src/assets"],
       "@components": ["./src/components"],
+      "@composables": ["./src/composables"],
       "@store": ["./src/store"],
       "@types": ["./src/types"],
       "@i18n": ["./src/i18n"],
