--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@types/node": "^20.12.12",
+    "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
     "vue": "^3.4.26",
     "vue-i18n": "9",
-    "vue-router": "4",
-    "vuex": "^4.1.0"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@babel/types": "^7.18.10",
