--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,7 +17,7 @@
     ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "types": [],
+    "types": ["node"],
     "baseUrl": ".",
     "paths": {
       "@assets": ["./src/assets"],
