only build crossplatform on version push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,13 @@
-name: Crossplatform Build Workflow
+name: Crossplatform Build
 
 # on:
 #   push:
 #     tags:
 #       - '*'
-on: [push, pull_request]
+on: 
+  push:
+    tags:
+      - "v*.*.*"
 
 env:
   # Necessary for most environments as build failure can occur due to OOM issues.
