--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.1-dev",
   "type": "module",
   "scripts": {
     "clean": "rimraf ./node_modules",
