--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,18 +22,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build:
-          - name: 'modm8'
-            platform:  'windows/amd64'
-            os: 'windows-latest'
-
-          - name: 'modm8'
-            platform:  'linux/amd64'
-            os: 'ubuntu-latest'
-          
-          - name: 'modm8'
-            platform:  'darwin/universal'
-            os: 'macos-latest'
+        build: [
+          { name: 'modm8', platform: 'linux/amd64', os: 'ubuntu-latest' },
+          { name: 'modm8', platform: 'windows/amd64', os: 'windows-latest' },
+          { name: 'modm8', platform: 'darwin/universal', os: 'macos-latest' }
+        ]
 
     runs-on: ${{ matrix.build.os }}
     steps:
@@ -53,5 +46,5 @@ jobs:
         with:
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
-          package: false
           go-version: '1.22.1'
+          package: true
