add frontend to vite config aliases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,4 +47,5 @@ jobs:
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
           go-version: '1.22.1'
+          node-version: 20
           package: true
