test forked build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,17 +35,14 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
       - name: Wails Build
-        uses: dAppServer/wails-build-action@v2.2
+        uses: The-Egg-Corp/wails-build-action@v1
         id: build
         with:
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
           go-version: '1.22.1'
           node-version: 20
+          use-bun: true
+          nsis: true
           package: true
