--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,16 @@ on:
         type: choice
         options: [info, warning, debug]
         default: "warning"
+      nsis:
+        description: "Create installer"
+        type: boolean
+        required: true
+        default: false
+      package: 
+        description: "Upload artifacts"
+        type: boolean
+        required: false
+        default: true
 
 env:
   # Necessary for most environments as build failure can occur due to OOM issues.
@@ -33,13 +43,13 @@ jobs:
           submodules: recursive
 
       - name: Wails Build
-        uses: The-Egg-Corp/wails-build-action@v1.2
+        uses: The-Egg-Corp/wails-build-action@v1.4
         id: build
         with:
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
           go-version: '1.22.1'
           node-version: 20
-          use-bun: true
-          nsis: true
-          package: true
+          setup-bun: true
+          nsis: ${{ inputs.nsis }}
+          package: ${{ inputs.package }}
