--- a/.github/workflows/upload-artifacts.yml
+++ b/.github/workflows/upload-artifacts.yml
@@ -6,14 +6,14 @@ on:
 jobs: 
   upload:
     runs-on: 'ubuntu-latest'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-            submodules: recursive
+    # steps:
+    #   - name: Checkout
+    #     uses: actions/checkout@v4
+    #     with:
+    #         submodules: recursive
 
-      - name: Upload to release
-        uses: actions/upload-artifact@v4
-        id: build
-        with:
-          path: ""
+    #   - name: Upload to release
+    #     uses: actions/upload-artifact@v4
+    #     id: build
+    #     with:
+    #       path: ""
