add back wails.json

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
       fail-fast: false
       matrix:
         build: [
-          { name: "modm8", platform: "linux/amd64", os: "ubuntu-latest" },
           { name: "modm8.exe", platform: "windows/amd64", os: "windows-latest" },
+          { name: "modm8", platform: "linux/amd64", os: "ubuntu-latest" },
           { name: "modm8", platform: "darwin/universal", os: "macos-latest" }
         ]
 
@@ -45,10 +45,11 @@ jobs:
         uses: The-Egg-Corp/wails-build-action@v1.4
         id: build
         with:
-          build-name: ${{ matrix.build.name }}
-          build-platform: ${{ matrix.build.platform }}
+          #name: "modm8"
           go-version: '1.22.1'
           node-version: 20
           setup-bun: true
+          build-name: ${{ matrix.build.name }}
+          build-platform: ${{ matrix.build.platform }}
           nsis: ${{ inputs.nsis }}
           package: ${{ inputs.package }}
