--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
           fi
 
       - name: Read properties.
+        shell: bash
         run: |
           PROJ_NAME=$(jq -r '.name' ./wails.json)
             
