--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         build: [
           { name: "modm8.exe", platform: "windows/amd64", os: "windows-latest" },
           { name: "modm8", platform: "linux/amd64", os: "ubuntu-latest" },
-          { name: "modm8", platform: "darwin/universal", os: "macos-latest" }
+          # { name: "modm8", platform: "darwin/universal", os: "macos-latest" }
         ]
 
     runs-on: ${{ matrix.build.os }}
