--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,34 +8,35 @@
     "reinstall": "bun run clean && bun i",
     "copy-themes": "copy-folder ./node_modules/primevue/resources/themes ./src/assets/themes --summary",
     "dev": "bunx vite",
-    "build": "bun run copy-themes && bunx vite build",
+    "build": "bunx vite build",
     "typecheck": "bunx vue-tsc --noEmit",
     "ci": "bun i && bun run typecheck",
     "lint": "bunx eslint ./src"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "compare-versions": "^6.1.0",
-    "pinia": "^2.1.7",
+    "@primevue/themes": "^4.1.1",
+    "compare-versions": "^6.1.1",
+    "pinia": "^2.2.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "^3.52.0",
-    "vue": "^3.4.26",
-    "vue-i18n": "9",
-    "vue-router": "4"
+    "primevue": "^4.1",
+    "vue": "^3.5.12",
+    "vue-i18n": "10",
+    "vue-router": "4.4.5"
   },
   "devDependencies": {
     "@babel/types": "^7.18.10",
     "@types/node": "^22.2.0",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "copy-folder-util": "^1.1.3",
+    "@vitejs/plugin-vue": "latest",
+    "copy-folder-util": "^1.1.4",
     "rimraf": "latest",
     "typescript": "latest",
     "vite": "latest",
     "vue-tsc": "latest",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "eslint": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
     "eslint-plugin-named-import-spacing": "^1.0.3"
   },
   "optionalDependencies": {
